[Feat] 게이트웨이 인증 필터